Document the native-access flag the examples already pass